@@ -1,3 +1,4 @@
+forces-and-motion: Changed the default object from crate to file cabinet so that force arrows don't go offscreen by default in the force graphs tab
 Fixed: Bouncy does not reset
 Fixed: Clear recording does not clear the charts
 Fixed a bug that caused the ramp to have partly faded ice
